--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -26,6 +26,10 @@ jobs:
             username: ${{ secrets.DOCKER_HUB_USERNAME }}
             password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
+        - name: Grab the submodule
+          run: |
+            git submodule update --init --recursive
+
         - name: Build and push
           id: docker_build
           uses: docker/build-push-action@v2
