Update fwd hist config

--- a/configs/forward_historian.config
+++ b/configs/forward_historian.config
@@ -8,7 +8,7 @@
     #       vctl auth serverkey
     #   Or if the web is enabled on the destination through the browser at:
     #       http(s)://hostaddress:port/discovery/
-    "destination-serverkey": null,
+    "destination-serverkey": Rv-QfTaum9KZ6VeTQaiUiWG4b8kaTHuJf4-tupmHsF8,
 
     # destination-vip-address - REQUIRED
     #   Address of the platform that receives forwarded messages.
@@ -16,7 +16,7 @@
     #       "destination-vip": "ipc://@/home/volttron/.volttron/run/vip.socket"
     #       "destination-vip": "tcp://127.0.0.1:22916"
     # In this case, the address is the 'vip-address' of volttron1 which is defined in platform_configs/platform_config1.yml
-    "destination-vip": "tcp://172.28.5.1:22916",
+    "destination-vip": "tcp://172.20.214.11:22916",
 
     # required_target_agents
     #   Allows checking on the remote instance to verify peer identtites
