--- a/docker-compose-intellemation.yml
+++ b/docker-compose-intellemation.yml
@@ -1,7 +1,7 @@
 version: '3.5'
 
 services:
-  volttron1:
+  intellemation:
     container_name: intellemation
     image: intellemation:latest
     ports:
