--- a/docker-compose-intellemation.yml
+++ b/docker-compose-intellemation.yml
@@ -1,15 +1,15 @@
 version: '3.5'
 
 services:
-  intellemation:
-#    container_name: intellemation
+  fwd1:
+    container_name: fwd1
     image: intellemation:latest
     ports:
       # host_port:container_port
       # ssl port for web
       - 8443:8443
       # port for VIP-address
-      - 22916:22916
+      - 22911:22916
     volumes:
       - ./configs:/home/volttron/configs
       - ./platform_config_intellemation.yml:/platform_config.yml
@@ -17,3 +17,22 @@ services:
       - CONFIG=/home/volttron/configs
       - LOCAL_USER_ID=1000
       - MESSAGE_BUS=zmq
+      - INSTANCE_NAME=fwd1
+
+  fwd2:
+      container_name: fwd2
+      image: intellemation:latest
+      ports:
+        # host_port:container_port
+        # ssl port for web
+        - 8443:8443
+        # port for VIP-address
+        - 22912:22916
+      volumes:
+        - ./configs:/home/volttron/configs
+        - ./platform_config_intellemation.yml:/platform_config.yml
+      environment:
+        - CONFIG=/home/volttron/configs
+        - LOCAL_USER_ID=1000
+        - MESSAGE_BUS=zmq
+        - INSTANCE_NAME=fwd2
