--- a/platform_config_intellemation.yml
+++ b/platform_config_intellemation.yml
@@ -7,7 +7,7 @@ config:
   # the volttron-central-address should be the docker assigned ip address of the VC platform
   # The address below is configured under a user-defined network in docker-compose.yml in the top-level 'networks' block
 #  volttron-central-address: https://172.28.5.1:8443
-  instance-name: intellemation
+#  instance-name: $INSTANCE_NAME
   message-bus: zmq
 
 # Agents dictionary to install.  The key must be a valid
@@ -20,15 +20,15 @@ agents:
     source: $VOLTTRON_ROOT/examples/ListenerAgent
     config: $CONFIG/listener.config
 
-#  platform.driver:
-#    source: $VOLTTRON_ROOT/services/core/PlatformDriverAgent
-#    config_store:
-#      fake.csv:
-#        file: $CONFIG/fake.csv
-#        type: --csv
-#      devices/fake-campus/fake-building/fake-device:
-#        file: $CONFIG/fake.config
+  platform.driver:
+    source: $VOLTTRON_ROOT/services/core/PlatformDriverAgent
+    config_store:
+      fake.csv:
+        file: $CONFIG/fake.csv
+        type: --csv
+      devices/fake-campus/fake-building/fake-device:
+        file: $CONFIG/fake.config
 
-  platform.forwardhistorian:
-    source: $VOLTTRON_ROOT/services/core/ForwardHistorian
-    config: $CONFIG/forward_historian.config
+#  platform.forwardhistorian:
+#    source: $VOLTTRON_ROOT/services/core/ForwardHistorian
+#    config: $CONFIG/forward_historian.config
