--- a/platform_config_intellemation.yml
+++ b/platform_config_intellemation.yml
@@ -7,7 +7,7 @@ config:
   # the volttron-central-address should be the docker assigned ip address of the VC platform
   # The address below is configured under a user-defined network in docker-compose.yml in the top-level 'networks' block
 #  volttron-central-address: https://172.28.5.1:8443
-#  instance-name: $INSTANCE_NAME
+  instance-name: fwd0
   message-bus: zmq
 
 # Agents dictionary to install.  The key must be a valid
